breadcrumbs add on

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,3 +13,4 @@
 @import "./componentssass/icons";
 @import "./componentssass/images";
 @import "./componentssass/blockquote.scss";
+@import "./componentssass/breadcrumb";
