--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,7 +281,14 @@ table {
   font-size: larger;
   padding: 5px;
   background-color: rgba(246, 249, 249, 0.5);
+  display: block;
 }
+@media (max-width: 425px) {
+  .hero-text {
+    display: none;
+  }
+}
+
 .navbar {
   display: flex;
   align-items: center;
@@ -449,6 +456,12 @@ input[type=checkbox] {
   text-align: center;
 }
 
+.containerwrapper {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
 .gallery {
   display: flex;
   flex-wrap: wrap;
@@ -466,8 +479,6 @@ input[type=checkbox] {
 }
 
 .blockqoute {
-  display: flex;
-  flex-direction: row;
   margin: 5px;
   padding: 10px;
 }
@@ -476,6 +487,7 @@ input[type=checkbox] {
   font-size: 200%;
   display: block;
   color: aquamarine;
+  padding: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
