--- a/src/scss/componentssass/_blockquote.scss
+++ b/src/scss/componentssass/_blockquote.scss
@@ -1,6 +1,6 @@
 .blockqoute {
-    display: flex;
-    flex-direction: row;
+    // display: flex;
+    // flex-direction: row;
     margin: 5px;
     padding: 10px;
 }
@@ -9,5 +9,6 @@
     font-size: 200%;
     display: block;
     color: aquamarine;
+    padding: 20px;
     
 }
