--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,15 @@ table {
   margin: 40px;
   background-color: rgb(255, 255, 255);
 }
+@media (max-width: 1000px) {
+  .crd3 {
+    width: fit-content;
+    height: 200px;
+    margin: 40px;
+    padding-bottom: 30px;
+    display: flex;
+  }
+}
 
 .crdimg3 {
   height: 300px;
@@ -110,6 +119,13 @@ table {
   border-radius: 8px;
   overflow: hidden;
   border-radius: 8px;
+}
+@media (max-width: 1000px) {
+  .crdimg3 {
+    margin-left: none;
+    width: 80%;
+    height: 230px;
+  }
 }
 
 .crdimg4 {
@@ -263,13 +279,12 @@ table {
 }
 
 .hero-img {
-  background-image: url("../../../assets/pics/homepage/hero.jpg");
   background-size: cover;
   width: 100vw;
-  min-height: 60vh;
   z-index: 0;
   padding-bottom: none;
   overflow: hidden;
+  height: 600px;
 }
 
 .hero-text {
@@ -279,11 +294,12 @@ table {
   margin-left: 10px;
   width: 40%;
   font-size: larger;
-  padding: 5px;
+  padding: 20px;
   background-color: rgba(246, 249, 249, 0.5);
   display: block;
+  border-radius: 10px;
 }
-@media (max-width: 425px) {
+@media (max-width: 686px) {
   .hero-text {
     display: none;
   }
