--- a/indexpages/components/hero/index.html
+++ b/indexpages/components/hero/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="hero">
-        <div class="hero-img"></div><!-- <img src="/pics/hero.jpg"> -->
+        <div class="hero-img"><img src="../../../assets/pics/homepage/hero.jpg" width="100%"></div><!-- <img src="/pics/hero.jpg"> -->
         <p class="hero-text"> "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis laboriosam rerum labore excepturi tempore perspiciatis non veritatis! Tenetur, eaque? Expedita, ab! Iste quibusdam adipisci voluptate similique. Laudantium aperiam quos a".</p>
     </div>
     <div class="hero">
