--- a/src/scss/componentssass/_hero.scss
+++ b/src/scss/componentssass/_hero.scss
@@ -1,12 +1,12 @@
 .hero-img {
-    background-image: url('../../../assets/pics/homepage/hero.jpg');
     background-size: cover;
     width: 100vw;
-    min-height: 60vh;  
+    // min-height: 60vh;  
     // position: absolute;
     z-index: 0;
     padding-bottom: none;
     overflow: hidden;
+    height: 600px;
 
 }
 .hero-text {
@@ -16,10 +16,11 @@
     margin-left: 10px;
     width: 40%;
     font-size: larger;
-    padding: 5px;
+    padding: 20px;
     background-color: rgba(246, 249, 249, 0.5);
     display: block;
-   @media (max-width: 425px){
+    border-radius: 10px;
+   @media (max-width: 686px){
       display: none; 
    }
 }
