--- a/src/scss/componentssass/_Alerts.scss
+++ b/src/scss/componentssass/_Alerts.scss
@@ -1,9 +1,10 @@
 .alertbanner {
-    background-color: lavenderblush;
+    background-color: rgb(255, 108, 157);
     display: block;
-    display: block;
+    position: fixed;
     padding: 10px;
     width: 100%; /* Change this value to adjust the width of the centered element */
     text-align: center; 
+    color: aliceblue;
 
 }
