--- a/src/scss/componentssass/_color.scss
+++ b/src/scss/componentssass/_color.scss
@@ -21,3 +21,15 @@
         background-color: #8F1926;
     }
 }
+$background-color1: #104E85;
+$background-color2: #2A6C94;
+$background-color3: #EF7E7F;
+$background-color4: #DF4456;
+$background-color5: #8F1926;
+$background-color6: white;
+$color1:  #104E85;
+$color2:  #2A6C94;
+$color3:  #EF7E7F;
+$color4:  #DF4456;
+$color:5 #8F1926;
+$color6: white;
