--- a/src/scss/componentssass/_nav.scss
+++ b/src/scss/componentssass/_nav.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 5px;
-    background-color: rgb(250, 250, 252, .6);
+    background-color: rgba(255, 255, 255, 0.6);
     /* color: rgb(28, 99, 157); */
     /* position: absolute; */
     z-index: 1;
@@ -12,7 +12,7 @@
 
 }
 .nav-links a {
-    color: rgb(37, 32, 77);
+    color: color1;
     text-decoration: none;
 }
 .logo:hover {
