--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,3 +14,17 @@
 @import "./componentssass/images";
 @import "./componentssass/blockquote.scss";
 @import "../S4PAGES/homepage";
+
+
+$background-color1: #104E85;
+$background-color2: #2A6C94;
+$background-color3: #EF7E7F;
+$background-color4: #DF4456;
+$background-color5: #8F1926;
+$background-color6: white;
+$color1:  #104E85;
+$color2:  #2A6C94;
+$color3:  #EF7E7F;
+$color4:  #DF4456;
+$color5: #8F1926;
+$color6: white;
