--- a/src/scss/componentssass/_card.scss
+++ b/src/scss/componentssass/_card.scss
@@ -1,9 +1,20 @@
-$background-color_1: rgb(255, 255, 255);
-$background-color_2: rgb(6, 134, 213);
 
+// $background-color_1: #104E85;
+// $background-color2: #2A6C94;
+// $background-color3: #EF7E7F;
+// $background-color4: #DF4456;
+// $background-color5: #8F1926;
+// $background-color6: white;
+// $color1:  #104E85;
+// $color2:  #2A6C94;
+// $color3:  #EF7E7F;
+// $color4:  #DF4456;
+// $color:5 #8F1926;
+// $color6: white;
+@import "./variables";
 .crd {
 	.crdimg {
-		background-color: $background-color_1;
+		background-color: $color_1;
 		overflow: hidden;
 	}
 
