--- a/src/scss/componentssass/_nav.scss
+++ b/src/scss/componentssass/_nav.scss
@@ -1,3 +1,4 @@
+@import "./variables";
 .navbar {
     display: flex;
     align-items: center;
@@ -12,7 +13,7 @@
 
 }
 .nav-links a {
-    color: color1;
+    color: $color_5;
     text-decoration: none;
 }
 .logo:hover {
@@ -28,12 +29,13 @@
 }
 .menu li:hover {
     transition: 0.3s ease;
-    background-color: rgb(228, 237, 241, .4);
+    background-color: $color_6;
     border-radius: 10px;
 }
 .menu li {
     padding: 10px 14px;
     text-decoration: none;
+    // color: $color_6;
 }
 .services {
     position: relative;
@@ -44,7 +46,7 @@
     padding: 1em 0;
     border-radius: 8px;
     top: 35px;
-    background-color: rgb(228, 237, 241, .4);
+    background-color: $background-color_3;
   
 }
 .dropdown li {
@@ -58,7 +60,7 @@
     margin-top: 10px;
 }
 .dropdown li:hover {
-    background-color: rgb(185, 212, 244);
+    background-color: $background-color_6;
     display: block;
   
 }
@@ -79,11 +81,13 @@ input[type=checkbox] {
     .menu {
         display: none;
         position: absolute;
-        background-color: rgb(139, 209, 234);
+        background-color: $background-color_1;
         right: 0;
         left: 0;
         text-align: center;
         padding: 16px 0;
+        margin-top: 30px;
+        
     }
     .menu li:hover {
         display: inline-block;
@@ -92,12 +96,15 @@ input[type=checkbox] {
     }
     .menu li + li {
         margin-top: 12px;
+       
     }
     input[type=checkbox]:checked ~ .menu {
         display: block;
     }
     .hamburger {
         display: block;
+        color: $background-color_5;
+        margin-right: 15px;
     }
     .dropdown {
         left: 50%;
@@ -106,6 +113,14 @@ input[type=checkbox] {
 
     }
     .dropdown li:hover {
-        background-color: rgb(156, 195, 243);
+        background-color: $background-color_5;
+    }
+    .nav-links a {
+        color: $color_6;
+    }
+    .menu li:hover {
+        transition: 0.3s ease;
+        background-color: $color_5;
+        border-radius: 10px;
     }
 }
