--- a/src/scss/componentssass/_variables.scss
+++ b/src/scss/componentssass/_variables.scss
@@ -21,15 +21,16 @@
         background-color: #8F1926;
     }
 }
-$background-color1: #104E85;
-$background-color2: #2A6C94;
-$background-color3: #EF7E7F;
-$background-color4: #DF4456;
-$background-color5: #8F1926;
-$background-color6: white;
-$color1:  #104E85;
-$color2:  #2A6C94;
-$color3:  #EF7E7F;
-$color4:  #DF4456;
-$color:5 #8F1926;
-$color6: white;
+
+$background-color_1: #104E85;
+$background-color_2: #2A6C94;
+$background-color_3: #EF7E7F;
+$background-color_4: #DF4456;
+$background-color_5: #8F1926;
+$background-color_6: white;
+$color_1:  #104E85;
+$color_2:  #2A6C94;
+$color_3:  #EF7E7F;
+$color_4:  #DF4456;
+$color_5: #8F1926;
+$color_6: white;
