--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,13 +264,12 @@ table {
 }
 
 .hero-img {
-  background-image: url("../../../assets/pics/homepage/hero.jpg");
   background-size: cover;
   width: 100vw;
-  min-height: 60vh;
   z-index: 0;
   padding-bottom: none;
   overflow: hidden;
+  height: 600px;
 }
 
 .hero-text {
@@ -282,7 +281,10 @@ table {
   font-size: larger;
   padding: 5px;
   background-color: rgba(246, 249, 249, 0.5);
+  border-radius: 10px;
+  padding: 10px;
 }
+
 .navbar {
   display: flex;
   align-items: center;
@@ -448,6 +450,12 @@ input[type=checkbox] {
   padding: 10px;
   width: 100%; /* Change this value to adjust the width of the centered element */
   text-align: center;
+}
+
+.containerwrapper {
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
 }
 
 .gallery {
