--- a/src/scss/componentssass/_card.scss
+++ b/src/scss/componentssass/_card.scss
@@ -14,7 +14,7 @@
 @import "./variables";
 .crd {
 	.crdimg {
-		background-color: $color_1;
+		// background-color: $color_1;
 		overflow: hidden;
 	}
 
@@ -66,7 +66,7 @@
 	height: 400px;
 	width: fit-content;
 	// margin: 40px;
-	background-color: rgb(239, 247, 255);
+	background-color: $background-color_6;
 	color: navy;
 	@media (max-width:1000px) {
 		width: fit-content;
@@ -84,7 +84,7 @@
 	width: 200px;
 	height: fit-content;
 	margin: 40px;
-	background-color: $background-color_1;
+	background-color: $background-color_6;
 	@media (max-width:1000px) {
 		width: fit-content;
 		height: 200px;
@@ -244,7 +244,7 @@
 .skillsset {
 	display: flex;
 	flex-direction: column;
-	background-color: navy;
+	background-color: $background-color_1;
 	align-items: center;
 	padding: 10px;
 	justify-content: center;
