--- a/src/scss/componentssass/_footer.scss
+++ b/src/scss/componentssass/_footer.scss
@@ -1,5 +1,6 @@
+@import "./variables";
 .footerdev {
-    background-color: rgb(200, 234, 234);
+    background-color: $background-color_1;
     display: block;
     width: 100%;
     height: 200px;
