--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,7 +286,7 @@ table {
 .skillsset {
   display: flex;
   flex-direction: column;
-  background-color: #104E85;
+  background-color: #2A6C94;
   align-items: center;
   padding: 10px;
   justify-content: center;
@@ -316,7 +316,7 @@ table {
 }
 
 .footerdev {
-  background-color: #104E85;
+  background-color: white;
   display: block;
   width: 100%;
   height: 200px;
@@ -592,10 +592,15 @@ input[type=checkbox] {
 .gallery img {
   width: 300px;
   height: 400px;
-  margin: 10px;
+  margin: 20px;
   object-fit: cover;
   transition: transform 0.3s ease-in-out;
   border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.gallery img:hover {
+  transform: scale(1.1);
 }
 
 .blockqoute {
