--- a/src/scss/componentssass/_Gallery.scss
+++ b/src/scss/componentssass/_Gallery.scss
@@ -31,8 +31,12 @@
   .gallery img {
     width: 300px;
     height: 400px;
-    margin: 10px;
+    margin: 20px;
     object-fit: cover;
     transition: transform 0.3s ease-in-out;
     border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
+  .gallery img:hover {
+    transform: scale(1.1)
   }
