--- a/src/scss/componentssass/_hero.scss
+++ b/src/scss/componentssass/_hero.scss
@@ -7,6 +7,7 @@
     padding-bottom: none;
     overflow: hidden;
     height: 600px;
+    margin: 0;
 
 }
 .hero-text {
@@ -23,4 +24,9 @@
    @media (max-width: 686px){
       display: none; 
    }
+}
+.hero {
+    margin: 0;
+    padding-bottom: none;
+    height: 600px;
 }
