--- a/src/S4PAGES/_homepage.scss
+++ b/src/S4PAGES/_homepage.scss
@@ -1,3 +1,8 @@
-h2 {
-    font-size: 30px;
+.about_me_pic {
+    // width: 30%;
+    height: 40%;
+    @media screen and ( min-width: 1000px) {
+        width: 20%;
+        height: 20%;
+    }
 }
