--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -658,7 +658,7 @@ p {
 .about_me_pic {
   height: 40%;
 }
-@media screen and (max-width: 1000px) {
+@media screen and (min-width: 1000px) {
   .about_me_pic {
     width: 20%;
     height: 20%;
