--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,16 +1,17 @@
-@import "reset";
-@import "./componentssass/card";
-@import "./componentssass/footer";
-@import "./componentssass/graphics";
-@import "./componentssass/hero";
-@import "./componentssass/nav";
-@import "./componentssass/button";
-@import "./componentssass/_type";
-@import "./componentssass/Alerts";
-@import "./componentssass/container";
-@import "./componentssass/Gallery";
-@import "./componentssass/icons";
-@import "./componentssass/images";
-@import "./componentssass/blockquote.scss";
-@import "../S4PAGES/homepage";
-@import "./../scss/componentssass/variables";
+@import "./reset";
+@import "./scsscomponents/_type";
+@import "./scsscomponents/Alerts";
+@import "./scsscomponents/blockquote";
+@import "./scsscomponents/button";
+@import "./scsscomponents/card";
+@import "./scsscomponents/coloringpages";
+@import "./scsscomponents/container";
+@import "./scsscomponents/footer";
+@import "./scsscomponents/Gallery";
+@import "./scsscomponents/graphics";
+@import "./scsscomponents/hero";
+@import "./scsscomponents/homepage";
+@import "./scsscomponents/icons";
+@import "./scsscomponents/images";
+@import "./scsscomponents/nav";
+@import "./scsscomponents/variables";
